# qlmdenoiser

./: CMakeLists.txt  README.md  defaultlightmapdenoiser.cpp  defaultlightmapdenoiser.h  main.cpp  prepare_deps.bat  prepare_deps.sh  qdefaultlightmapdenoiser.cpp  qdefaultlightmapdenoiser.h  qlmdenoiser.cpp
.github/workflows/: main.yml
oidn/cmake/: oidn_install.cmake
oidn/mkl-dnn/: CMakeLists.txt
oidn/mkl-dnn/include/oneapi/dnnl/: dnnl_version.h
oidn/weights/: rtlightmap_dir.h  rtlightmap_hdr.h
